# SDLNoOpenGL

./: CMakeLists.txt
.github/workflows/: BuildDontRunWithCMakePresets.yml  BuildDontRunWithoutCMakePresets.yml  BuildRunWithCMakePresets.yml  BuildRunWithoutCMakePresets.yml
SDLNoOpenGL/hdr/: SDLWindowNoOpenGL.hpp
SDLNoOpenGL/src/: MainSDLNoOpenGL.cpp  SDLWindowNoOpenGL.cpp
